<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        style="@style/Widget.AppCompat.NormalButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@drawable/start_btn"
        android:textColor="@drawable/button_text_color"

        android:fontFamily="@font/aquire_bold"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/btn_wordlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_wordlist"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/wordlist"
        android:background="@drawable/wordlist_btn"
        android:textColor="@drawable/button_text_color"

        android:fontFamily="@font/aquire_bold"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/btn_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_quit"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:background="@drawable/quit_btn"
        android:textColor="@drawable/button_text_color"

        android:fontFamily="@font/aquire_bold"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_wordlist" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/ll_word_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:fontFamily="@font/aquire"-->
<!--                android:text="@string/word_of_the_day"-->
<!--                android:textColor="@color/tawnyPort"-->
<!--                android:textSize="18sp" />-->

            <TextView
                android:id="@+id/tv_word_of_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:text="Adapt"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_definition_of_day"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="v. to make suit a new purpose v. to accommodate oneself to a new condition, setting, or situation" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>